-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
Met this during local racer test on master.
5[77465]: segfault at 8 ip 00000031f720b3f3 sp 00007fff8f7c3e50 error 4 in ld-2.12.so[31f7200000+20000] LustreError: 20700:0:(mdd_object.c:70:mdd_la_get()) lustre-MDD0000: object [0x200000404:0x4774:0x0] not found: rc = -2 LustreError: 20700:0:(mdd_object.c:70:mdd_la_get()) Skipped 1 previous similar message Lustre: 42406:0:(osd_internal.h:1087:osd_trans_exec_check()) op 9: used 10, used now 10, reserved 5 Lustre: 42406:0:(osd_handler.c:902:osd_trans_dump_creds()) create: 0/0/0, destroy: 0/0/0 Lustre: 42406:0:(osd_handler.c:909:osd_trans_dump_creds()) attr_set: 2/2/0, xattr_set: 1/64/0 Lustre: 42406:0:(osd_handler.c:919:osd_trans_dump_creds()) write: 6/14/0, punch: 0/0/0, quota 4/4/0 Lustre: 42406:0:(osd_handler.c:926:osd_trans_dump_creds()) insert: 0/0/0, delete: 1/5/10 Lustre: 42406:0:(osd_handler.c:933:osd_trans_dump_creds()) ref_add: 0/0/0, ref_del: 1/1/0 LustreError: 42406:0:(osd_internal.h:1090:osd_trans_exec_check()) LBUG Pid: 42406, comm: mdt_out00_004 Call Trace: [<ffffffffa05b4875>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] [<ffffffffa05b4e77>] lbug_with_loc+0x47/0xb0 [libcfs] [<ffffffffa0f30631>] osd_index_ea_delete+0x7b1/0xe10 [osd_ldiskfs] [<ffffffffa0999f90>] out_obj_index_delete+0x150/0x370 [ptlrpc] [<ffffffffa099a1d8>] out_tx_index_delete_exec+0x28/0x190 [ptlrpc] [<ffffffffa098e0ca>] out_tx_end+0xda/0x5d0 [ptlrpc] [<ffffffffa09931df>] out_handle+0x7af/0x1950 [ptlrpc] [<ffffffffa05c0c01>] ? libcfs_debug_msg+0x41/0x50 [libcfs] [<ffffffffa098afc2>] tgt_request_handle+0xa42/0x1230 [ptlrpc] [<ffffffffa09331a1>] ptlrpc_main+0xe41/0x1920 [ptlrpc] [<ffffffffa0932360>] ? ptlrpc_main+0x0/0x1920 [ptlrpc] [<ffffffff8109e66e>] kthread+0x9e/0xc0 [<ffffffff8100c20a>] child_rip+0xa/0x20 [<ffffffff8109e5d0>] ? kthread+0x0/0xc0 [<ffffffff8100c200>] ? child_rip+0x0/0x20 LustreError: dumping log to /tmp/lustre-log.1438790617.42406 Message from syslogd@testnode at Aug 5 09:48:22 ... kernel:LustreError: 8393:0:(osd_internal.h:1090:osd_trans_exec_check()) LBUG