LU-6969 osd: remove agent inodes in a separate transaction

Create a separate list of agent inodes that need to be deleted,
and delete them after the main transaction has been completed.
Otherwise the number of transaction credits needed to delete
these agents is not accounted in the main transaction and may
trigger assertions in the credit accounting.

Change-Id: Idefce3304d070c5a14de55054d95a57767a5954d
Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-on: http://review.whamcloud.com/15924
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: wangdi <di.wang@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>