lustre/osd-ldiskfs/osd_internal.h
@@ -218,6 +218,12 @@ struct osd_otable_it {
 				 ooi_waiting:1; /* it::next is waiting. */
 };
 
+struct osd_obj_orphan {
+	struct list_head oor_list;
+	struct lu_env	*oor_env; /* to identify "own" records */
+	__u32 oor_ino;
+};
+
 /*
  * osd device.
  */
@@ -285,6 +291,9 @@ struct osd_device {
 	 * exceeds the osd_device::od_full_scrub_threshold_rate,
 	 * then trigger OI scrub to scan the whole device. */
 	__u64			 od_full_scrub_threshold_rate;
+
+	/* a list of orphaned agent inodes, protected with od_osfs_lock */
+	struct list_head	 od_orphan_list;
 };
 
 enum osd_full_scrub_ratio {
@@ -340,6 +349,7 @@ struct osd_thandle {
         unsigned short          ot_credits;
         unsigned short          ot_id_cnt;
         unsigned short          ot_id_type;
+	int			ot_remove_agents:1;
         uid_t                   ot_id_array[OSD_MAX_UGID_CNT];
 	struct lquota_trans    *ot_quota_trans;
 #if OSD_THANDLE_STATS
